# TextAdventureParser

./: CMakeLists.txt  README.md  TextAdventureParser.code-workspace  a.exe.stackdump  main.cpp
assets/: game.ta
include/: parser.hpp  string_extensions.hpp  ta_object.hpp  text_adventure.hpp
include/ta_exceptions/: ta_parse_exception.hpp
include/ta_objects/: esc_reference.hpp  esc_state.hpp  ta_action.hpp  ta_array.hpp  ta_event.hpp  ta_item.hpp  ta_object.hpp  ta_reference.hpp  ta_scene.hpp  ta_state.hpp  ta_string.hpp
src/: esc_reference.cpp  parser.cpp  ta_event.cpp  ta_item.cpp  ta_object.cpp  ta_scene.cpp  text_adventure.cpp
src/ta_objects/: ta_action.cpp  ta_array.cpp  ta_event.cpp  ta_item.cpp  ta_object.cpp  ta_reference.cpp  ta_scene.cpp  ta_state.cpp  ta_string.cpp
